upgrading dependencies to get cargo audit clean, this also required lifting the MSRV

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set default toolchain
+        run: rustup default 1.72.0
       - name: Build
         run: cargo build --release
       - name: make dir
