--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ version = "0.1.8"
 edition = "2021"
 
 [dependencies]
-actix-web = "3"
+actix-web = "4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 bdk = "0.28"
 bdk-reserves = "0.28"
-env_logger = "0.10"
+#env_logger = "0.10"
 log = "0.4"
 base64 = "0.13"
 
 [dev-dependencies]
-actix-rt = "1"
+#actix-rt = "2"
 
 [profile.release]
 opt-level = 'z'     # Optimize for size
