--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,18 @@
 [package]
 name = "bdk-reserves-web"
-version = "0.1.10"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
 actix-web = "4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-bdk = "0.28"
-bdk-reserves = "0.28"
-#env_logger = "0.10"
+bdk_wallet = "1.0.0"
+bdk-reserves = { git = "https://github.com/AminaBank/bdk-reserves", branch = "feature/v1" }
+bdk_electrum = "0.20"
 log = "0.4"
-base64 = "0.13"
 
 [dev-dependencies]
-#actix-rt = "2"
 
 [profile.release]
 opt-level = 'z'     # Optimize for size
